--- a/scripts/ds_config.json
+++ b/scripts/ds_config.json
@@ -3,19 +3,16 @@
         "enabled": true
     },
     "zero_optimization": {
-        "stage": 3,
+        "stage": 2,
         "offload_optimizer": {
             "device": "none"
         },
-        "offload_param": {
-            "device": "none"
-        },
+        "allgather_partitions": true,
+        "allgather_bucket_size": 2e8,
+        "reduce_scatter": true,
+        "reduce_bucket_size": 2e8,
         "overlap_comm": true,
-        "contiguous_gradients": true,
-        "reduce_bucket_size": "auto",
-        "stage3_prefetch_bucket_size": "auto",
-        "stage3_param_persistence_threshold": "auto",
-        "stage3_gather_16bit_weights_on_model_save": true
+        "contiguous_gradients": true
     },
     "gradient_accumulation_steps": "auto",
     "gradient_clipping": 1.0,
